# pi-sms

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/commands/: quality-check.md  quality-fix.md
.cursor/rules/: changelog.mdc  code-guidelines.mdc  modem-networking.mdc
.cursor/skills/pi-sms-ops/: SKILL.md
.github/workflows/: quality.yml
deploy/: pi-sms.service
pi_sms/: __init__.py  __main__.py
pi_sms/core/: __init__.py  config.py  debug.py  dependencies.py  main.py  scheduler.py  workflow.py
pi_sms/filter/: __init__.py  filter.py
pi_sms/modem/: __init__.py  hilink.py  sms.py
pi_sms/setup/: __init__.py  network.py  setup.py  uninstall.py
pi_sms/trello/: __init__.py  trello.py
scripts/: install.sh  setup-venv.sh  uninstall.sh
tests/: test_config.py  test_filter.py  test_hilink.py  test_network.py  test_sms.py  test_trello.py  test_workflow.py
